<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.ui.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:padding="25dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/save_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:src="@drawable/saveicon"
            app:layout_constraintTop_toTopOf="parent" />

        <com.savestudents.components.textInput.TextInputCustomView
            android:id="@+id/email_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:hint="@string/hint_email_account"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/save_icon" />

        <com.savestudents.components.textInput.TextInputCustomView
            android:id="@+id/password_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_password_account"
            android:inputType="textPassword"
            app:layout_constraintTop_toBottomOf="@id/email_text_layout"
            app:passwordToggleEnabled="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_button"
            style="@style/Theme.Ui.Button.Text"
            android:text="@string/register_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_text_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            style="@style/Theme.Ui.Button"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:text="@string/submit_text"
            app:layout_constraintTop_toBottomOf="@id/register_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>