<resources>
    <string name="register_text">Não tem conta? Registra-se</string>
    <string name="submit_text">Entrar</string>
    <string name="register_account">Cadastrar</string>
    <string name="register_title">Registrar</string>
    <string name="curriculum_title">Eventos</string>
    <string name="select_date_title">Selecione uma data</string>
    <string name="week_events_title">Eventos dessa semana</string>

    <string name="hint_email_account">E-mail</string>
    <string name="hint_password_account">Senha</string>
    <string name="hint_name_account">Nome</string>
    <string name="hint_search_matter">Digite a matéria</string>
    <string name="hint_date_account">Data de nascimento</string>
    <string name="hint_institution_account">Faculdade</string>
    <string name="hint_period">Período</string>
    <string name="hint_add_event">Evento</string>
    <string name="helper_name_account">O seu nome completo vai aparecer na tela inicial do aplicativo.</string>
    <string name="helper_email_account">Esse é o e-mail cadastrado na sua conta. Impossível mudar.</string>
    <string name="helper_search_matter">Digite a matéria que deseja adicionar</string>
    <string name="helper_date_account">Digite sua data de nascimento</string>
    <string name="helper_institution_account">Digite a faculdade que você estuda</string>
    <string name="helper_period">Selecione o período dessa matéria.</string>
    <string name="helper_add_event">Coloque o nome de algum evento. Ex: Prova, Trabalho, Reunião em grupo.</string>

    <string name="account_validation_empty_email">Digite seu e-mail nesse campo.</string>
    <string name="account_validation_empty_password">Digite sua senha nesse campo.</string>
    <string name="account_validation_empty_birth_date">Preencha sua data de nascimento.</string>
    <string name="account_validation_empty_name">Digite seu nome nesse campo.</string>
    <string name="account_validation_empty_institution">Selecione a faculdade que você estuda.</string>

    <string name="account_validation_error">Seu e-mail ou senha estão incorretos</string>
    <string name="account_validation_incorrect_email">E-mail no formato incorreto. Ex: exemplo@gmail.com</string>
    <string name="account_validation_incorrect_birth_date">A sua data de nascimento precisa ter esse formato, por exemplo: 00/00/0000</string>
    <string name="account_validation_create_error">Erro ao criar conta. Verifique sua conexão com a internet e tente novamente.</string>
    <string name="not_text_error">  </string>

    <string name="add_matter_chip_monday">Segunda</string>
    <string name="add_matter_chip_tuesday">Terça</string>
    <string name="add_matter_chip_wednesday">Quarta</string>
    <string name="add_matter_chip_thursday">Quinta</string>
    <string name="add_matter_chip_friday">Sexta</string>
    <string name="add_matter_chip_saturday">Sabado</string>
    <string name="add_matter_select_matter_error">Selecione uma matéria</string>
    <string name="add_matter_select_days_title">Seleciona o dia dessa matéria</string>
    <string name="add_matter_select_days_error">Selecione pelomenos um dia para essa matéria</string>
    <string name="add_matter_select_hour_title">Selecionar horario da aula</string>
    <string name="add_matter_select_hour_error">Nenhum dia selecionado</string>
    <string name="add_matter_select_initial_hour">Escolha um horario para o inicia da aula</string>
    <string name="add_matter_hour_error">Selecionar horário</string>
    <string name="add_matter_select_final_hour">Escolha um horario para o término da aula</string>
    <string name="add_matter_initial_hour">Horário de inicio</string>
    <string name="add_matter_period">Período: %s</string>
    <string name="add_matter_teacher">Professor(a): %s</string>
    <string name="add_matter_success_register_alert">"A Materia %s foi cadastrada.</string>
    <string name="add_matter_error_register_alert">Erro ao cadastrar a materia.</string>
    <string name="add_matter_not_search_matter">Não encontrou alguma matéria?</string>

    <string name="curriculum_error_message">Ocorreu problema ao baixar a cronograma, tente novamente mais tarde.</string>
    <string name="curriculum_calendar_error_message">Nenhum evento registrado</string>
    <string name="curriculum_calendar_fab_matter">Adicionar matéria</string>
    <string name="curriculum_calendar_fab_event">Adicionar evento</string>
    <string name="curriculum_success_remove_event">Evento removido com sucesso!</string>
    <string name="curriculum_error_remove_event">Erro ao excluir esse evento, tente novamente mais tarde.</string>

    <string name="add_event_empty_event_error">Adicione o nome do evento</string>
    <string name="add_event_not_selected_date_error">Selecione uma data para esse vento</string>
    <string name="add_event_success_register_alert">"O evento %s foi cadastrado.</string>
    <string name="add_event_error_register_alert">Erro ao cadastrar o evento %s.</string>

    <string name="bottom_sheet_add_matter_option_title">Adicione uma matéria</string>
    <string name="bottom_sheet_add_matter_option_subtitle">Pode acontecer de você não encontrar alguma matéria. Para adicionar, basta preencher o campo e confirmar.</string>
    <string name="bottom_sheet_add_matter_option_matter_error">Digite o nome da matéria que deseja adicionar.</string>
    <string name="bottom_sheet_add_matter_option_period_error">Selecione o período que você tem essa matéria na faculdade.</string>

    <string name="config_security_button_title">Acesso e segurança</string>
    <string name="config_notification_button_title">Notificações</string>
    <string name="config_exit_app_button_title">Sair</string>

    <string name="notification_config_notification_title">Habilitar notificação</string>
    <string name="notification_config_notification_description">Opção para ativar as notificações na configuração do seu aplicativo.</string>

    <array name="period_list">
        <item>1º Período</item>
        <item>2º Período</item>
        <item>3º Período</item>
        <item>4º Período</item>
        <item>5º Período</item>
        <item>6º Período</item>
        <item>7º Período</item>
        <item>8º Período</item>
        <item>9º Período</item>
        <item>10º Período</item>
        <item>11º Período</item>
        <item>12º Período</item>
    </array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>